[gd_scene load_steps=11 format=3 uid="uid://bw4mruj4h4xvt"]

[ext_resource type="Script" path="res://plane/ai_plane/ai_plane.gd" id="1_7rmpl"]
[ext_resource type="Shader" path="res://plane/biplane.gdshader" id="2_bkabs"]
[ext_resource type="ArrayMesh" uid="uid://dybbteaqlpcsl" path="res://plane/Biplane.obj" id="3_dpti5"]
[ext_resource type="Material" uid="uid://kok4miyt12ps" path="res://plane/metal_material.tres" id="4_uwpov"]
[ext_resource type="PackedScene" uid="uid://dlw40tgo686yg" path="res://plane/firing_area.tscn" id="5_xq4qi"]

[sub_resource type="ShaderMaterial" id="ShaderMaterial_t6l5c"]
render_priority = 0
shader = ExtResource("2_bkabs")
shader_parameter/body_color = Vector3(0, 0, 0)

[sub_resource type="BoxMesh" id="BoxMesh_dm4nn"]
material = ExtResource("4_uwpov")
size = Vector3(1, 0.25, 0.25)

[sub_resource type="BoxShape3D" id="BoxShape3D_dxt4t"]
size = Vector3(2, 2, 8)

[sub_resource type="SphereShape3D" id="SphereShape3D_7tygp"]
radius = 100.0

[sub_resource type="CylinderShape3D" id="CylinderShape3D_qa572"]
height = 80.0
radius = 50.0

[node name="AIPlane" type="CharacterBody3D"]
collision_layer = 2
collision_mask = 3
script = ExtResource("1_7rmpl")

[node name="MeshInstance3D" type="MeshInstance3D" parent="."]
transform = Transform3D(-4.37114e-08, 0, -1, 0, 1, 0, 1, 0, -4.37114e-08, 0, 0, 1)
material_override = SubResource("ShaderMaterial_t6l5c")
mesh = ExtResource("3_dpti5")

[node name="GunMesh" type="MeshInstance3D" parent="MeshInstance3D"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -3.52153, 1.12302, 1.53931e-07)
mesh = SubResource("BoxMesh_dm4nn")

[node name="CollisionShape3D" type="CollisionShape3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, 1)
shape = SubResource("BoxShape3D_dxt4t")

[node name="FiringArea" parent="." instance=ExtResource("5_xq4qi")]
damage = 6.0
distance = 80.0
radius = 4.0

[node name="CooldownTimer" type="Timer" parent="."]
one_shot = true

[node name="DetectionArea" type="Area3D" parent="."]
collision_layer = 2
collision_mask = 2

[node name="CollisionShape3D" type="CollisionShape3D" parent="DetectionArea"]
shape = SubResource("SphereShape3D_7tygp")

[node name="FrontArc" type="Area3D" parent="."]
collision_layer = 2
collision_mask = 2

[node name="CollisionShape3D" type="CollisionShape3D" parent="FrontArc"]
transform = Transform3D(1, 0, 0, 0, -4.37114e-08, -1, 0, 1, -4.37114e-08, 0, 0, -50)
shape = SubResource("CylinderShape3D_qa572")

[connection signal="body_entered" from="DetectionArea" to="." method="_on_detection_area_body_entered"]
[connection signal="body_exited" from="DetectionArea" to="." method="_on_detection_area_body_exited"]
